# earthframe

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  devops.yml  enhancement_request.yml  planning_task.yml
backend/: .env  .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: _logger.py  exceptions.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/api/routers/: ai.py  machine.py  machines.py  simulation.py  simulations.py
backend/app/core/: config.py
backend/app/db/: __init__.py  artifact.py  base.py  link.py  machine.py  session.py  simulation.py  variable.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  artifact.py  common.py  link.py  machine.py  simulation.py  status.py  variable.py
backend/app/schemas/: __init__.py  artifact.py  base.py  link.py  machine.py  simulation.py  utils.py  variable.py
backend/app/tests/api/: test_routes.py
backend/migrations/: env.py
backend/migrations/versions/: 20250926_114758_659a7a1b5a2c_initial.py  20250926_114924_46e20d34f20d_seed_status_lookup.py  20250929_124841_cd588c054df9_rename_comp_set_alias_to_compset_alias.py  20250930_112312_a81333263984_make_simulation_name_and_case_name_.py  20250930_122016_2479a4b72048_make_case_name_in_simulations_table_non_nullable.py  20250930_122105_ee663e137b4d_seed_the_machines_table.py
backend/tests/: conftest.py  test_exceptions.py
backend/tests/api/routers/: test_ai.py  test_deps.py  test_machines.py  test_simulation.py  test_simulations.py
backend/tests/schemas/: test_machine.py  test_simulation.py
frontend/: .eslintrc.js  .prettierignore  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/public/data/: simulations.json
frontend/public/mock/: machines.json  simulations.json
frontend/src/: App.tsx
frontend/src/api/: axios.ts  compareAPI.ts  simulations.ts
frontend/src/components/examples/: ExampleComponent.tsx
frontend/src/components/layout/: NavBar.tsx  SelectedSimulationsChipList.tsx
frontend/src/components/shared/: SimulationStatusBadge.tsx  SimulationTypeBadge.tsx
frontend/src/components/types/: react-table.d.ts
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: use-toast.ts  useSimulation.ts
frontend/src/pages/Browse/: Browse.tsx  BrowseCard.tsx  BrowseCardsView.tsx  BrowseFiltersSidePanel.tsx  BrowseTableView.tsx  BrowseToolbar.tsx  CollapsibleGroup.tsx  DataTable.tsx  FiltersPanel.tsx  MultiSelectCheckBoxGroup.tsx  ResultCard.tsx  ResultCards.tsx  SimulationResultCard.tsx  SimulationResultsCards.tsx  SimulationResultsTable.tsx
frontend/src/pages/Compare/: AIFloatingButton.tsx  Compare.tsx  CompareAIFloatingButton.tsx  ComparisonAI.tsx  utils.tsx
frontend/src/pages/Home/: Home.tsx  LatestSimulationsTable.tsx  NewSimsTable.tsx  VariableCard.tsx
frontend/src/pages/Search/: DataTable.tsx  FiltersPanel.tsx  ResultCard.tsx  ResultCards.tsx  Search.tsx
frontend/src/pages/Simulations/: SimulationDetails.tsx  SimulationPathCard.tsx  Simulations.tsx
frontend/src/pages/SimulationsCatalog/: SimulationDetails.tsx  SimulationsCatalog.tsx  SimulationsCatalogDetails.tsx  SimulationsCatalogPathCard.tsx
frontend/src/pages/Submit/: Submit.tsx
frontend/src/pages/Upload/: FormSection.tsx  FormTokenInput.tsx  StickyActionBar.tsx  StickyActionsBar.tsx  Upload.tsx
frontend/src/routes/: routes.tsx
frontend/src/types/: index.ts
frontend/src/utils/: utils.ts
public/data/: simulations.json
src/: App.tsx
src/pages/Browse/: Browse.tsx  DataTable.tsx
src/pages/Compare/: Compare.tsx
src/routes/: routes.tsx
